[package]
name = "gluer"
version = "0.4.0"
edition = "2021"
authors = ["Nils Wrenger <nils@wrenger.net>"]
description = "A wrapper for Rust frameworks that eliminates redundant type and function definitions between the frontend and backend"
keywords = ["parser", "api", "macro"]
categories = ["accessibility", "web-programming", "api-bindings"]
rust-version = "1.70.0"
repository = "https://github.com/nwrenger/gluer"
readme = "README.md"
license = "MIT"

[lib]

[dependencies]
gluer-macros = { path = "macros", version = "0.4.0" }
axum = "0.7.5"

[dev-dependencies]
tokio = { version = "1.39.2", features = ["macros", "rt-multi-thread"] }
serde = { version = "1.0", features = ["derive"] }
