[package]
name = "gluer"
version = "0.7.2"
edition = "2021"
authors = ["Nils Wrenger <nils@wrenger.net>"]
description = "A wrapper for Rust frameworks that eliminates redundant type and function definitions between the frontend and backend"
keywords = ["parser", "api", "macro"]
categories = ["accessibility", "web-programming", "api-bindings"]
rust-version = "1.61.0"
repository = "https://github.com/nwrenger/gluer"
readme = "README.md"
license = "MIT"

[lib]
proc-macro = true

[dependencies]
quote = "1.0"
syn = { version = "2.0.62", features = ["full"] }
proc-macro2 = "1.0"

[dev-dependencies]
axum = "0.7.5"
tokio = { version = "1.39.2", features = ["macros", "rt-multi-thread"] }
serde = { version = "1.0", features = ["derive"] }
