[package]
name = "gluer-macros"
version = "0.3.1"
edition = "2021"
authors = ["Nils Wrenger <nils@wrenger.net>"]
description = "Procedural macros for the Gluer framework"
keywords = ["parser", "api", "macro"]
categories = ["accessibility", "web-programming", "api-bindings"]
rust-version = "1.64.0"
repository = "https://github.com/nwrenger/gluer"
readme = "README.md"
license = "MIT"

[lib]
proc-macro = true

[dependencies]
quote = "1.0"
syn = { version = "2.0.62", features = ["full"] }
proc-macro2 = "1.0"

[dev-dependencies]
axum = "0.7.5"
tokio = { version = "1.39.2", features = ["macros", "rt-multi-thread"] }
serde = { version = "1.0", features = ["derive"] }
