[package]
name = "gluer-macros"
version = "0.5.2"
edition = "2021"
authors = ["Nils Wrenger <nils@wrenger.net>"]
description = "Procedural macros for the gluer framework"
keywords = ["parser", "api", "macro"]
categories = ["accessibility", "web-programming", "api-bindings"]
rust-version = "1.64.0"
repository = "https://github.com/nwrenger/gluer"
license = "MIT"

[lib]
proc-macro = true

[dependencies]
quote = "1.0"
syn = { version = "2.0.62", features = ["full"] }
proc-macro2 = "1.0"
